{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 60,
  "lineage": "ac4d445c-30b8-6756-04fc-b7bda574551e",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:253490765215:instance/i-048c695232462bed5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm-demo-bastion-profile",
            "id": "i-048c695232462bed5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ssm-demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01d10dad8e31921af",
            "private_dns": "ip-10-0-1-23.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.23",
            "public_dns": "ec2-54-198-9-195.compute-1.amazonaws.com",
            "public_ip": "54.198.9.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0053fb8a8189cdf2a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a9fc8a998650389",
            "tags": {
              "Name": "ssm-demo-bastion"
            },
            "tags_all": {
              "Name": "ssm-demo-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04cd912f72dc10d98"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.bastion_profile",
            "module.iam.aws_iam_role.bastion_role",
            "module.network.aws_security_group.bastion",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:253490765215:instance/i-0247564859054afbc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm-demo-ssm-profile",
            "id": "i-0247564859054afbc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fa55e656ed3e93f7",
            "private_dns": "ip-10-0-3-229.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0820117784f0d5f7a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e40685df1fffcad8",
            "tags": {
              "Name": "ssm-demo-webapp-0"
            },
            "tags_all": {
              "Name": "ssm-demo-webapp-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dd152aebde258015"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.webapp",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:253490765215:instance/i-0dd15342a28a17a6f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm-demo-ssm-profile",
            "id": "i-0dd15342a28a17a6f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-091bd5c9025f186bf",
            "private_dns": "ip-10-0-4-126.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d473e0be88bb1fc0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078e83865af2ad296",
            "tags": {
              "Name": "ssm-demo-webapp-1"
            },
            "tags_all": {
              "Name": "ssm-demo-webapp-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dd152aebde258015"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.webapp",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:253490765215:loadbalancer/app/ssm-demo-alb/2476dca584c03f38",
            "arn_suffix": "app/ssm-demo-alb/2476dca584c03f38",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ssm-demo-alb-839131456.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:253490765215:loadbalancer/app/ssm-demo-alb/2476dca584c03f38",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ssm-demo-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-032c2bfe04c8ffa7e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00a9fc8a998650389"
              },
              {
                "subnet_id": "subnet-09f08bf06e1ea77c4"
              }
            ],
            "subnets": [
              "subnet-00a9fc8a998650389",
              "subnet-09f08bf06e1ea77c4"
            ],
            "tags": {
              "Name": "ssm-demo-alb"
            },
            "tags_all": {
              "Name": "ssm-demo-alb"
            },
            "vpc_id": "vpc-0579f429e01565165",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:253490765215:listener/app/ssm-demo-alb/2476dca584c03f38/6f8ba43087b4de65",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:253490765215:targetgroup/ssm-demo-tg/3101d489ff535ced",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:253490765215:listener/app/ssm-demo-alb/2476dca584c03f38/6f8ba43087b4de65",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:253490765215:loadbalancer/app/ssm-demo-alb/2476dca584c03f38",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_lb.webapp",
            "module.ec2.aws_lb_target_group.webapp",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:253490765215:targetgroup/ssm-demo-tg/3101d489ff535ced",
            "arn_suffix": "targetgroup/ssm-demo-tg/3101d489ff535ced",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:253490765215:targetgroup/ssm-demo-tg/3101d489ff535ced",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:253490765215:loadbalancer/app/ssm-demo-alb/2476dca584c03f38"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ssm-demo-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ssm-demo-tg"
            },
            "tags_all": {
              "Name": "ssm-demo-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0579f429e01565165"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:253490765215:targetgroup/ssm-demo-tg/3101d489ff535ced-20250402141223260500000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:253490765215:targetgroup/ssm-demo-tg/3101d489ff535ced",
            "target_id": "i-0247564859054afbc"
          },
          "dependencies": [
            "module.ec2.aws_instance.webapp",
            "module.ec2.aws_lb_target_group.webapp",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.webapp",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:253490765215:targetgroup/ssm-demo-tg/3101d489ff535ced-20250402141223122100000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:253490765215:targetgroup/ssm-demo-tg/3101d489ff535ced",
            "target_id": "i-0dd15342a28a17a6f"
          },
          "dependencies": [
            "module.ec2.aws_instance.webapp",
            "module.ec2.aws_lb_target_group.webapp",
            "module.iam.aws_iam_instance_profile.ssm_profile",
            "module.iam.aws_iam_role.ssm_role",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.webapp",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0509d2ad07bb769d4",
            "arn": "arn:aws:ec2:us-east-1:253490765215:elastic-ip/eipalloc-0509d2ad07bb769d4",
            "association_id": "eipassoc-066a210f9298e4b7a",
            "domain": "vpc",
            "id": "eipalloc-0509d2ad07bb769d4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-095c08b604ca9f514",
            "private_dns": "ip-10-0-1-108.ec2.internal",
            "private_ip": "10.0.1.108",
            "public_dns": "ec2-44-195-4-227.compute-1.amazonaws.com",
            "public_ip": "44.195.4.227",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ssm-demo-nat-eip"
            },
            "tags_all": {
              "Name": "ssm-demo-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253490765215:internet-gateway/igw-0df01f6d8c6c887ff",
            "id": "igw-0df01f6d8c6c887ff",
            "owner_id": "253490765215",
            "tags": {
              "Name": "ssm-demo-igw"
            },
            "tags_all": {
              "Name": "ssm-demo-igw"
            },
            "vpc_id": "vpc-0579f429e01565165"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0509d2ad07bb769d4",
            "association_id": "eipassoc-066a210f9298e4b7a",
            "connectivity_type": "public",
            "id": "nat-0755692844bdc1a2f",
            "network_interface_id": "eni-095c08b604ca9f514",
            "private_ip": "10.0.1.108",
            "public_ip": "44.195.4.227",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00a9fc8a998650389",
            "tags": {
              "Name": "ssm-demo-nat"
            },
            "tags_all": {
              "Name": "ssm-demo-nat"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253490765215:route-table/rtb-0c3c50374d520b5bb",
            "id": "rtb-0c3c50374d520b5bb",
            "owner_id": "253490765215",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0755692844bdc1a2f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ssm-demo-private-rt"
            },
            "tags_all": {
              "Name": "ssm-demo-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0579f429e01565165"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253490765215:route-table/rtb-0a056fa7f3ab639ee",
            "id": "rtb-0a056fa7f3ab639ee",
            "owner_id": "253490765215",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df01f6d8c6c887ff",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ssm-demo-public-rt"
            },
            "tags_all": {
              "Name": "ssm-demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0579f429e01565165"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0085bafa05fea6146",
            "route_table_id": "rtb-0c3c50374d520b5bb",
            "subnet_id": "subnet-0e40685df1fffcad8"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbfd5a9e0b78c656",
            "route_table_id": "rtb-0c3c50374d520b5bb",
            "subnet_id": "subnet-078e83865af2ad296"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad4dfa919b014250",
            "route_table_id": "rtb-0a056fa7f3ab639ee",
            "subnet_id": "subnet-00a9fc8a998650389"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c643f33f3aedc4b",
            "route_table_id": "rtb-0a056fa7f3ab639ee",
            "subnet_id": "subnet-09f08bf06e1ea77c4"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253490765215:security-group/sg-032c2bfe04c8ffa7e",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032c2bfe04c8ffa7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ssm-demo-alb-sg",
            "name_prefix": "",
            "owner_id": "253490765215",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssm-demo-alb-sg"
            },
            "tags_all": {
              "Name": "ssm-demo-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0579f429e01565165"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253490765215:security-group/sg-04cd912f72dc10d98",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04cd912f72dc10d98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssm-demo-bastion-sg",
            "name_prefix": "",
            "owner_id": "253490765215",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssm-demo-bastion-sg"
            },
            "tags_all": {
              "Name": "ssm-demo-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0579f429e01565165"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253490765215:security-group/sg-01dcf727d49af706b",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01dcf727d49af706b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ssm-demo-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "253490765215",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssm-demo-vpc-endpoints-sg"
            },
            "tags_all": {
              "Name": "ssm-demo-vpc-endpoints-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0579f429e01565165"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253490765215:security-group/sg-0dd152aebde258015",
            "description": "Security group for webapp instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd152aebde258015",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-032c2bfe04c8ffa7e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ssm-demo-webapp-sg",
            "name_prefix": "",
            "owner_id": "253490765215",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssm-demo-webapp-sg"
            },
            "tags_all": {
              "Name": "ssm-demo-webapp-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0579f429e01565165"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253490765215:subnet/subnet-0e40685df1fffcad8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e40685df1fffcad8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253490765215",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ssm-demo-private-subnet-1"
            },
            "tags_all": {
              "Name": "ssm-demo-private-subnet-1"
            },
            "vpc_id": "vpc-0579f429e01565165"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253490765215:subnet/subnet-078e83865af2ad296",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078e83865af2ad296",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253490765215",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ssm-demo-private-subnet-2"
            },
            "tags_all": {
              "Name": "ssm-demo-private-subnet-2"
            },
            "vpc_id": "vpc-0579f429e01565165"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253490765215:subnet/subnet-00a9fc8a998650389",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a9fc8a998650389",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253490765215",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ssm-demo-public-subnet-1"
            },
            "tags_all": {
              "Name": "ssm-demo-public-subnet-1"
            },
            "vpc_id": "vpc-0579f429e01565165"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253490765215:subnet/subnet-09f08bf06e1ea77c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f08bf06e1ea77c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253490765215",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ssm-demo-public-subnet-2"
            },
            "tags_all": {
              "Name": "ssm-demo-public-subnet-2"
            },
            "vpc_id": "vpc-0579f429e01565165"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253490765215:vpc/vpc-0579f429e01565165",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f09f6d372426a7c7",
            "default_route_table_id": "rtb-0971530f2ec94d462",
            "default_security_group_id": "sg-0311cf0f53ad8e4d8",
            "dhcp_options_id": "dopt-059d97d3a5d6a9710",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0579f429e01565165",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0971530f2ec94d462",
            "owner_id": "253490765215",
            "tags": {
              "Name": "ssm-demo-vpc"
            },
            "tags_all": {
              "Name": "ssm-demo-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253490765215:vpc-endpoint/vpce-006ec6080be70dcd5",
            "dns_entry": [
              {
                "dns_name": "vpce-006ec6080be70dcd5-016n71t2.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-006ec6080be70dcd5-016n71t2-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-006ec6080be70dcd5-016n71t2-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03905932VR17L5LED2IG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-006ec6080be70dcd5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0dbf4bc15a3c45b69",
              "eni-0f4cdb76796bf3a0e"
            ],
            "owner_id": "253490765215",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01dcf727d49af706b"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.167",
                "subnet_id": "subnet-0e40685df1fffcad8"
              },
              {
                "ipv4": "10.0.4.238",
                "subnet_id": "subnet-078e83865af2ad296"
              }
            ],
            "subnet_ids": [
              "subnet-078e83865af2ad296",
              "subnet-0e40685df1fffcad8"
            ],
            "tags": {
              "Name": "ssm-demo-ec2messages-endpoint"
            },
            "tags_all": {
              "Name": "ssm-demo-ec2messages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0579f429e01565165"
          },
          "dependencies": [
            "module.network.aws_security_group.vpc_endpoints",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253490765215:vpc-endpoint/vpce-062ed5659b7731e21",
            "dns_entry": [
              {
                "dns_name": "vpce-062ed5659b7731e21-bambku3j.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-062ed5659b7731e21-bambku3j-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-062ed5659b7731e21-bambku3j-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02977201310CHPCK3UOH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-062ed5659b7731e21",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09008b2ca8d9eef8c",
              "eni-0b1791acc3ae846e8"
            ],
            "owner_id": "253490765215",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01dcf727d49af706b"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.238",
                "subnet_id": "subnet-0e40685df1fffcad8"
              },
              {
                "ipv4": "10.0.4.104",
                "subnet_id": "subnet-078e83865af2ad296"
              }
            ],
            "subnet_ids": [
              "subnet-078e83865af2ad296",
              "subnet-0e40685df1fffcad8"
            ],
            "tags": {
              "Name": "ssm-demo-ssm-endpoint"
            },
            "tags_all": {
              "Name": "ssm-demo-ssm-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0579f429e01565165"
          },
          "dependencies": [
            "module.network.aws_security_group.vpc_endpoints",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253490765215:vpc-endpoint/vpce-0060c496a0a5ccf51",
            "dns_entry": [
              {
                "dns_name": "vpce-0060c496a0a5ccf51-qotn6w78.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0060c496a0a5ccf51-qotn6w78-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0060c496a0a5ccf51-qotn6w78-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0297702181UAIX4G0RA0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0060c496a0a5ccf51",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0552a26b383a1ad71",
              "eni-08be90f8a0fa42b2e"
            ],
            "owner_id": "253490765215",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-01dcf727d49af706b"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.225",
                "subnet_id": "subnet-0e40685df1fffcad8"
              },
              {
                "ipv4": "10.0.4.170",
                "subnet_id": "subnet-078e83865af2ad296"
              }
            ],
            "subnet_ids": [
              "subnet-078e83865af2ad296",
              "subnet-0e40685df1fffcad8"
            ],
            "tags": {
              "Name": "ssm-demo-ssmmessages-endpoint"
            },
            "tags_all": {
              "Name": "ssm-demo-ssmmessages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0579f429e01565165"
          },
          "dependencies": [
            "module.network.aws_security_group.vpc_endpoints",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}